# roughenough

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE-MIT  README.md  SECURITY.md  codecov.yml  coverage.sh  deny.toml  dist-workspace.toml  example.cfg  rustfmt.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  examples.yml  release.yml  rust.yml
benches/: ed25519_sigs.rs  messages.rs  popcount.rs  roughenough-bench.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  lib.rs  main.rs  measurement.rs  reporting.rs  sequence.rs  transport.rs  validation.rs
crates/client/testdata/: serverlist-cloudflare.json
crates/common/: Cargo.toml
crates/common/src/: crypto.rs  encoding.rs
crates/integration/: Cargo.toml
crates/integration/src/: lib.rs  load_gen.rs
crates/keys/: Cargo.toml
crates/keys/src/: lib.rs  seed.rs  storage.rs
crates/merkle/: Cargo.toml
crates/merkle/benches/: get_paths.rs
crates/merkle/src/: lib.rs
crates/merkle/tests/: merkle_validation_tests.rs
crates/protocol/: Cargo.toml
crates/protocol/benches/: message_ops.rs
crates/protocol/src/: cursor.rs  error.rs  response.rs  wire.rs
crates/protocol/src/tags/: dele.rs  mod.rs  mtype.rs  nonce.rs  pubk.rs  sig.rs  srv.rs  ver.rs
crates/protocol/src/util/: hex.rs
crates/protocol/testdata/: README.md  rfc-response.path8.index2.4c16c619
crates/protocol/tests/: adversarial_request_tests.rs
crates/reporting-server/: Cargo.toml
crates/reporting-server/src/: lib.rs  main.rs  storage.rs  validation.rs
crates/reporting-server/tests/: server_tests.rs
crates/roughenough-client/: Cargo.toml
crates/roughenough-client/src/: args.rs  client.rs  lib.rs  main.rs  measurement.rs  reporting.rs  sequence.rs  server_list.rs  transport.rs  validation.rs
crates/roughenough-client/testdata/: serverlist-localhost.json
crates/roughenough-common/: Cargo.toml
crates/roughenough-common/src/: crypto.rs  encoding.rs  lib.rs
crates/roughenough-integration/: Cargo.toml
crates/roughenough-integration/src/: lib.rs  load_gen.rs  main.rs
crates/roughenough-keys/: Cargo.toml
crates/roughenough-keys/src/: lib.rs  runtime.rs  seed.rs  storage.rs
crates/roughenough-keys/src/longterm/: awskms.rs  awssecret.rs  envelope.rs  gcpkms.rs  gcpsecret.rs  identity.rs
crates/roughenough-keys/src/online/: aws_lc_ed25519.rs  linuxkrs.rs  memory.rs  mod.rs  onlinekey.rs  pkcs11.rs  sshagent.rs
crates/roughenough-keys/src/tests/: lifecycle_tests.rs
crates/roughenough-merkle/: Cargo.toml
crates/roughenough-merkle/benches/: get_paths.rs
crates/roughenough-protocol/: Cargo.toml
crates/roughenough-reporting-server/: Cargo.toml
crates/roughenough-reporting-server/src/: lib.rs  main.rs  storage.rs  validation.rs
crates/roughenough-reporting-server/tests/: server_tests.rs
crates/roughenough-server/: Cargo.toml
crates/roughenough-server/benches/: io_benchmark.rs  server_metrics.rs  server_network.rs  server_ops.rs
crates/roughenough-server/examples/: metrics_watcher.rs
crates/roughenough-server/src/: args.rs  keysource.rs  lib.rs  main.rs  network.rs  requests.rs  responses.rs  test_utils.rs  worker.rs
crates/roughenough-server/src/backend/: mio_backend.rs  mod.rs  recvmmsg_backend.rs
crates/roughenough-server/src/metrics/: aggregator.rs  batch.rs  latency.rs  mod.rs  network.rs  request.rs  response.rs  snapshot.rs  types.rs
crates/roughenough-server/tests/: alloc_tests.rs  network_resilience_tests.rs  worker_loop_tests.rs
crates/server/: Cargo.toml
doc/: OPTIONAL-FEATURES.md  PROTECTION.md  RELEASE-CHECKLIST.md  REQUEST-FLOW.md  RFC-PROTOCOL.md  draft-ietf-ntp-roughtime-14.txt  draft-ietf-ntp-roughtime-19.txt  draft13-todo.txt  rfc-commentary.md
fuzz/: Cargo.toml  README.md  minimize_all.bash
fuzz/fuzz_targets/: fuzz_request_parse.rs  fuzz_response_parse.rs  fuzz_structured.rs
src/: config.rs  error.rs  grease.rs  hex.rs  keys.rs  lib.rs  main.rs  merkle.rs  message.rs  request.rs  responder.rs  server.rs  sign.rs  stats.rs  tag.rs  version.rs
src/config/: environment.rs  file.rs  memory.rs  mod.rs
src/key/: awskms.rs  envelope.rs  longterm.rs  mod.rs  online.rs
src/kms/: awskms.rs  envelope.rs  gcpkms.rs  mod.rs
src/stats/: aggregated.rs  estimation.rs  mod.rs  per_client.rs  popcount.rs  reporter.rs
tasks/: task-1 - Accept draft-flagged protocol versions.md  task-1 - Externalize-stats.md  task-10 - Add Changelog and Versioning.md  task-11 - Enhance Crate Metadata.md  task-13 - Resolve Code Quality Issues.md  task-15 - Enhance CI-CD Pipeline.md  task-16 - Prepare for Crates.io Publication.md  task-18 - Resolve Publication Blockers.md  task-19 - Add Falcon-512 Signatures.md  task-19.1 - Falcon-512 Implementation Steering.md  task-2 - Accept oversized requests up to MTU.md  task-2 - Add-comments-that-link-the-code-to-the-RFC.md  task-20 - Analyze CERQ Response Size Constraints.md  task-21 - Define Tag Values and Signing Domain.md  task-22 - Define Falcon-512 SeedBackend Integration.md  task-23A - Add Falcon Tags to Protocol Enum.md  task-23B - Implement SIGQ and PUBQ Wire Format.md  task-23C - Implement CERQ Tag Structure.md  task-24 - Implement Falcon-512 Key Generation.md  task-25 - Extend SeedBackend for Falcon-512.md  task-26A - Implement Server CERQ Generation.md  task-26B - Add Server CERQ Tests.md  task-27A - Implement Client Falcon-512 Verification.md  task-27B - Integrate CERQ Validation in Client.md  task-28 - Add CERQ Integration Tests.md  task-29 - Add Falcon-512-padded Test Vectors.md  task-3 - Add-decrypt_seed-to-GcpKms-and-AwsKms.md  task-30 - Add Performance Benchmarks.md  task-31 - Add Edge Case Tests and Fuzzing.md  task-32 - Update Documentation for PQ Support.md  task-4 - Add-JSON-stats-output.md  task-5 - Compelete keys cli.md  task-6 - Security Remediation.md  task-7 - Repository Cleanup.md  task-8 - Complete README Documentation.md  task-9 - Create Contributor Documentation.md
(+63 files in other folders)
