[workspace.package]
authors = ["stuart@int08h.com"]
edition = "2024"
license = "Apache-2.0 OR MIT"
version = "2.0.0"
homepage = "https://github.com/int08h/roughenough"
rust-version = "1.88"

[workspace.dependencies]
# Internal workspace crates
roughenough-client = { path = "crates/roughenough-client", version = "2.0.0" }
roughenough-common = { path = "crates/roughenough-common", version = "2.0.0" }
roughenough-integration-test = { path = "crates/roughenough-integration", version = "2.0.0" }
roughenough-keys = { path = "crates/roughenough-keys", version = "2.0.0" }
roughenough-merkle = { path = "crates/roughenough-merkle", version = "2.0.0" }
roughenough-protocol = { path = "crates/roughenough-protocol", version = "2.0.0" }
roughenough-server = { path = "crates/roughenough-server", version = "2.0.0" }

# External dependencies
aws-config = "1.8"
aws-lc-rs = "1.14"
aws-sdk-kms = "1.90"
aws-sdk-secretsmanager = "1.90"
jiff = { version = "0.2", features = ["serde"] }
clap = "4.5"
crc32c = "0.6"
crossbeam-channel = "0.5"
cryptoki = "0.10"
ctrlc = "3.5"
data-encoding = "2.9"
divan = "0.1"
fastrand = "2.3"
google-cloud-kms-v1 = "1.1"
google-cloud-secretmanager-v1 = "1.1"
libc = "0.2.177"
mio = "1.1"
pastey = "0.1"
serde = "1.0"
serde_json = "1.0"
socket2 = "0.6"
ssh-agent-client-rs = "1.1"
ssh-key = "0.6"
thiserror = "2.0"
time-format = "1.2"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
ureq = "3.1"
zeroize = "1.8"

[workspace.dependencies.linux-keyutils]
version = "0.2"
features = ["std"]

[workspace]
resolver = "3"
members = [
    "crates/roughenough-client",
    "crates/roughenough-common",
    "crates/roughenough-integration",
    "crates/roughenough-merkle",
    "crates/roughenough-protocol",
    "crates/roughenough-keys",
    "crates/roughenough-server",
]
default-members = [
    "crates/roughenough-client",
    "crates/roughenough-common",
    "crates/roughenough-integration",
    "crates/roughenough-merkle",
    "crates/roughenough-protocol",
    "crates/roughenough-keys",
    "crates/roughenough-server",
]
exclude = [
    "fuzz",
    "crates/roughenough-reporting-server"
]

[profile.release]
debug = "full"

[profile.release-lto]
inherits = "release"
debug = "line-tables-only"
lto = "thin"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release-lto"
