[workspace.package]
authors = ["stuart@int08h.com"]
edition = "2024"
license = "Apache-2.0 OR MIT"
version = "2.0.0"
homepage = "https://github.com/int08h/roughenough"
rust-version = "1.88"

[workspace.dependencies]
# Internal workspace crates
roughenough-client = { path = "crates/roughenough-client", version = "2.0.0" }
roughenough-common = { path = "crates/roughenough-common", version = "2.0.0" }
roughenough-integration-test = { path = "crates/roughenough-integration", version = "2.0.0" }
roughenough-keys = { path = "crates/roughenough-keys", version = "2.0.0" }
roughenough-merkle = { path = "crates/roughenough-merkle", version = "2.0.0" }
roughenough-protocol = { path = "crates/roughenough-protocol", version = "2.0.0" }
roughenough-server = { path = "crates/roughenough-server", version = "2.0.0" }
roughenough-reporting-server = { path = "crates/roughenough-reporting-server", version = "2.0.0" }

# External dependencies
aws-config = { version = "1.9", default-features = false, features = ["default-https-client", "rt-tokio", "credentials-process"] }
aws-lc-rs = { version = "1.17", default-features = false, features = ["aws-lc-sys", "alloc"] }
# Keep in lockstep with the aws-lc-sys version aws-lc-rs requires: aws-lc-sys
# version-mangles its symbols and links key, so skew does not fail the build,
# it silently links two copies of AWS-LC (CI checks cargo tree --duplicates).
aws-lc-sys = { version = "0.42", default-features = false }
aws-sdk-kms = { version = "1.112", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-secretsmanager = { version = "1.109", default-features = false, features = ["default-https-client", "rt-tokio"] }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
async-trait = "0.1"
jiff = "0.2"
clap = { version = "4.6", default-features = false, features = ["std", "color", "help", "usage", "error-context"] }
crc32c = "0.6"
cryptoki = "0.12.0"
data-encoding = "2.11"
divan = "0.1"
google-cloud-kms-v1 = "1.11"
google-cloud-secretmanager-v1 = "1.10"
libc = "0.2.177"
mio = { version = "1.2", default-features = false }
pastey = "0.2"
reqwest = { version = "0.13", default-features = false }
serde = "1.0"
serde_json = "1.0"
signal-hook = "0.4"
socket2 = "0.6"
ssh-agent-client-rs = "1.1"
ssh-key = "0.6"
thiserror = "2.0"
time-format = "1.2"
tokio = "1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
ureq = { version = "3.3", default-features = false, features = ["rustls"] }
zeroize = "1.9"

[workspace.dependencies.linux-keyutils]
version = "0.2"
features = ["std"]

[workspace]
resolver = "3"
members = [
    "crates/roughenough-client",
    "crates/roughenough-common",
    "crates/roughenough-integration",
    "crates/roughenough-merkle",
    "crates/roughenough-protocol",
    "crates/roughenough-keys",
    "crates/roughenough-server",
    "crates/roughenough-reporting-server"
]
# reporting-server is excluded so the default build skips the axum/tokio web
# stack; build it explicitly with 'cargo build -p roughenough-reporting-server'
default-members = [
    "crates/roughenough-client",
    "crates/roughenough-common",
    "crates/roughenough-integration",
    "crates/roughenough-merkle",
    "crates/roughenough-protocol",
    "crates/roughenough-keys",
    "crates/roughenough-server",
]
exclude = [
    "fuzz",
]

[profile.release]
debug = "full"

[profile.release-lto]
inherits = "release"
debug = "line-tables-only"
lto = "thin"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release-lto"
