[package]
name = "merkle"
description = "SHA-512 Merkle tree implementation"
license = "Apache-2.0 OR MIT"
edition.workspace = true
version.workspace = true
repository = "https://github.com/int08h/roughenough"
homepage = "https://github.com/int08h/roughenough"
readme = "../../README.md"
keywords = ["merkle", "tree", "hash", "cryptography", "roughtime"]
categories = ["cryptography", "algorithms"]

[dependencies]
aws-lc-rs = { workspace = true }
protocol = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
data-encoding = { workspace = true }

[[bench]]
name = "get_paths"
harness = false
test = false
