[package]
name = "reporting-server"
description = "Web server for collecting and storing Roughtime malfeasance reports"
license = "Apache-2.0 OR MIT"
version = "2.0.0"
edition = "2024"
repository = "https://github.com/int08h/roughenough"
homepage = "https://github.com/int08h/roughenough"
readme = "../../README.md"
keywords = ["roughtime", "malfeasance", "reporting", "server", "web"]
categories = ["network-programming", "web-programming"]

[[bin]]
name = "reporting-server"
path = "src/main.rs"

[dependencies]
client = { path = "../client" }
common = { path = "../common" }
protocol = { path = "../protocol" }
async-trait = "0.1"
aws-lc-rs = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1"

[dev-dependencies]
common = { path = "../common" }
server = { path = "../server", features = ["test-utils"] }
keys = { path = "../keys" }
merkle = { path = "../merkle" }
aws-lc-rs = "1"
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }