[package]
name = "roughenough-common"
description = "Shared cryptography and encoding utilities for Roughenough"
license = "Apache-2.0 OR MIT"
edition.workspace = true
version.workspace = true
repository = "https://github.com/int08h/roughenough"
homepage = "https://github.com/int08h/roughenough"
readme = "../../README.md"
keywords = ["roughtime", "cryptography", "encoding", "utilities", "ed25519"]
categories = ["cryptography"]

[dependencies]
roughenough-protocol = { workspace = true }
aws-lc-rs = { workspace = true }
data-encoding = { workspace = true }