[package]
name = "roughenough-reporting-server"
description = "Web server for collecting and storing Roughtime malfeasance reports"
license = "Apache-2.0 OR MIT"
version = "2.0.0"
edition = "2024"
repository = "https://github.com/int08h/roughenough"
homepage = "https://github.com/int08h/roughenough"
readme = "../../README.md"
keywords = ["roughtime", "malfeasance", "reporting", "server", "web"]
categories = ["network-programming", "web-programming"]

[[bin]]
name = "roughenough_reporting_server"
path = "src/main.rs"

[dependencies]
roughenough-client = { path = "../roughenough-client" }
roughenough-common = { path = "../roughenough-common" }
roughenough-protocol = { path = "../roughenough-protocol" }
async-trait = "0.1"
aws-lc-rs = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1"

[dev-dependencies]
roughenough-common = { path = "../roughenough-common" }
roughenough-server = { path = "../roughenough-server", features = ["test-utils"] }
roughenough-keys = { path = "../roughenough-keys" }
roughenough-merkle = { path = "../roughenough-merkle" }
aws-lc-rs = "1"
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }