[package]
name = "roughenough-reporting-server"
description = "Web server for collecting and storing Roughtime malfeasance reports"
license = "Apache-2.0 OR MIT"
version = "2.0.0"
edition = "2024"
repository = "https://github.com/int08h/roughenough"
homepage = "https://github.com/int08h/roughenough"
readme = "../../README.md"
keywords = ["roughtime", "malfeasance", "reporting", "server", "web"]
categories = ["network-programming", "web-programming"]

[[bin]]
name = "roughenough_reporting_server"
path = "src/main.rs"

[dependencies]
roughenough-client = { path = "../roughenough-client" }
roughenough-common = { path = "../roughenough-common" }
roughenough-protocol = { path = "../roughenough-protocol" }
async-trait = { workspace = true }
aws-lc-rs = { workspace = true }
axum = { workspace = true }
jiff = { workspace = true, features = ["serde"] }
data-encoding = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
roughenough-common = { path = "../roughenough-common" }
roughenough-server = { path = "../roughenough-server", features = ["test-utils"] }
roughenough-keys = { path = "../roughenough-keys" }
roughenough-merkle = { path = "../roughenough-merkle" }
aws-lc-rs = { workspace = true }
reqwest = { workspace = true, features = ["json"] }